[#9052] Improve AlarmJob performance